--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "express": "^4.16.2",
     "method-override": "^2.3.10",
     "mongoose": "^4.12.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.2"
   }
 }
